# forseti

./: .forseti.toml  .gitignore  .mise.toml  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: config.rs  context.rs  main.rs
src/commands/: init.rs  install.rs  lint.rs  mod.rs
