[package]
name = "openlinter"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive"] }
clap_builder = "4.5.46"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"

# 
openlinter_sdk = { path = "../openlinter_sdk" }
