[package]
name = "forseti"
version = "0.1.0"
edition = "2024"
description = "A linter meant too handle all languages"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.46", features = ["derive", "cargo"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9.5"
